[package]
name = "photopainter-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
log = { version = "0.4.29", optional = true }
defmt-or-log = { version = "0.2.3", features = ["log"] }
# defmt-serial = "0.11"
panic-probe = { version = "1", features = ["print-defmt"], optional = true }
panic-halt = { version = "1", optional = true }

unwrap-infallible = "1.0.0"
static_cell = "1"

embedded-hal-async = "1"

embassy-rp = { version = "0.9", features = ["time-driver", "rp2040"] }
embassy-time = { version = "0.5.0", features = [] }
embassy-usb = { version = "0.5.1", features = [] }
embassy-sync = { version = "0.7.2", features = [] }
embassy-executor = { version = "0.9", features = [
    "executor-thread",
    "arch-cortex-m",
] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embassy-usb-logger = { version = "0.5.1", optional = true }

embedded-graphics = "0.8"

[dependencies.epd-waveshare]
path = "../epd-waveshare"
# git = "http://github.com/fakusb/epd-waveshare"
# rev = "256ecf76f112ba83046228a0f8fedaf0052cac90",
features = ["async"]


[features]
default = ["debug", "log"]
debug = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-rp/defmt",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-usb/defmt",
    "dep:panic-probe",
    "embassy-time/defmt-timestamp-uptime",
]
log = ["dep:log", "dep:embassy-usb-logger", "dep:panic-halt"]

[profile.dev]
debug = true
debug-assertions = true
opt-level = "s"
overflow-checks = true


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
